--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,10 @@
         @apply p-4 bg-gray-700/50 rounded-lg max-w-[300px]
     }
 }
+
+.chatRow{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+}
